@@ -5,6 +5,7 @@ TODO:
 	  + Remove all references to an item when it's hidden
 	    (preferably with the option to re-add them when unhiding)
 	  + Add a link for the hidden 'h' option at /hist
+	+ Rewrite the revision diff code, it's horrible...
 
 1.22 - ?
 	- Inverted vote graph
@@ -18,6 +19,7 @@ TODO:
 	    changes (causedby) -> changes (id)
 	    threads (id, count) -> threads_posts (tid, num)
 	- Converted relation graphs to PNG
+	- Added link between screenshots and releases
 
 1.21 - 2008-08-16 (r90)
 	- Added !vn and !uptime commands to Multi::IRC
